crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_reduction_axis_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: axes
---
[
    Row,
    Column,
]
