crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_reduction_max_flat.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: result
---
Ok(
    ValueWithIndex {
        value: 6.0,
        index: 5,
    },
)
