crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_reduction_sum_axis_row.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: result
---
Ok(
    [
        6.0,
        15.0,
    ],
)
