crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_rope_config_custom_base.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: cfg
---
RopeConfig {
    head_dim: 16,
    max_seq_len: 128,
    base: 500000.0,
    scaling_factor: 1.0,
}
