crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_rope_frequencies_dim8.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: rounded
---
[
    1.0,
    0.0,
    1.0,
    0.0,
    1.0,
    0.0,
    1.0,
    0.0,
    0.540302,
    0.841471,
    0.995004,
    0.099833,
    0.99995,
    0.01,
    1.0,
    0.001,
    -0.416147,
    0.909297,
    0.980067,
    0.198669,
    0.9998,
    0.019999,
    0.999998,
    0.002,
    -0.989993,
    0.14112,
    0.955337,
    0.29552,
    0.99955,
    0.029996,
    0.999996,
    0.003,
    -0.653644,
    -0.756803,
    0.921061,
    0.389418,
    0.9992,
    0.039989,
    0.999992,
    0.004,
    0.283662,
    -0.958924,
    0.877583,
    0.479426,
    0.99875,
    0.049979,
    0.999988,
    0.005,
    0.96017,
    -0.279416,
    0.825336,
    0.564643,
    0.998201,
    0.059964,
    0.999982,
    0.006,
    0.753902,
    0.656987,
    0.764842,
    0.644218,
    0.997551,
    0.069943,
    0.999976,
    0.007,
    -0.1455,
    0.989358,
    0.696707,
    0.717356,
    0.996802,
    0.079915,
    0.999968,
    0.008,
    -0.91113,
    0.412119,
    0.62161,
    0.783327,
    0.995953,
    0.089879,
    0.99996,
    0.009,
    -0.839072,
    -0.544021,
    0.540302,
    0.841471,
    0.995004,
    0.099833,
    0.99995,
    0.01,
    0.004426,
    -0.99999,
    0.453596,
    0.891207,
    0.993956,
    0.109778,
    0.99994,
    0.011,
    0.843854,
    -0.536573,
    0.362358,
    0.932039,
    0.992809,
    0.119712,
    0.999928,
    0.012,
    0.907447,
    0.420167,
    0.267499,
    0.963558,
    0.991562,
    0.129634,
    0.999916,
    0.013,
    0.136737,
    0.990607,
    0.169967,
    0.98545,
    0.990216,
    0.139543,
    0.999902,
    0.014,
    -0.759688,
    0.650288,
    0.070737,
    0.997495,
    0.988771,
    0.149438,
    0.999888,
    0.014999,
    -0.95766,
    -0.287903,
    -0.0292,
    0.999574,
    0.987227,
    0.159318,
    0.999872,
    0.015999,
    -0.275163,
    -0.961398,
    -0.128845,
    0.991665,
    0.985585,
    0.169182,
    0.999856,
    0.016999,
    0.660317,
    -0.750987,
    -0.227202,
    0.973848,
    0.983844,
    0.17903,
    0.999838,
    0.017999,
    0.988705,
    0.149877,
    -0.32329,
    0.9463,
    0.982004,
    0.188859,
    0.99982,
    0.018999,
    0.408082,
    0.912945,
    -0.416147,
    0.909297,
    0.980067,
    0.198669,
    0.9998,
    0.019999,
    -0.547729,
    0.836656,
    -0.504846,
    0.863209,
    0.978031,
    0.20846,
    0.99978,
    0.020998,
    -0.999961,
    -0.008851,
    -0.588501,
    0.808496,
    0.975897,
    0.21823,
    0.999758,
    0.021998,
    -0.532833,
    -0.84622,
    -0.666276,
    0.745705,
    0.973666,
    0.227978,
    0.999736,
    0.022998,
    0.424179,
    -0.905578,
    -0.737394,
    0.675463,
    0.971338,
    0.237703,
    0.999712,
    0.023998,
    0.991203,
    -0.132352,
    -0.801144,
    0.598472,
    0.968912,
    0.247404,
    0.999688,
    0.024997,
    0.646919,
    0.762558,
    -0.856889,
    0.515501,
    0.96639,
    0.257081,
    0.999662,
    0.025997,
    -0.292139,
    0.956376,
    -0.904072,
    0.42738,
    0.963771,
    0.266731,
    0.999636,
    0.026997,
    -0.962606,
    0.270906,
    -0.942222,
    0.334988,
    0.961055,
    0.276356,
    0.999608,
    0.027996,
    -0.748058,
    -0.663634,
    -0.970958,
    0.239249,
    0.958244,
    0.285952,
    0.99958,
    0.028996,
    0.154251,
    -0.988032,
    -0.989993,
    0.14112,
    0.955337,
    0.29552,
    0.99955,
    0.029996,
    0.914742,
    -0.404038,
    -0.999135,
    0.041581,
    0.952334,
    0.305059,
    0.99952,
    0.030995,
    0.834223,
    0.551427,
    -0.998295,
    -0.058374,
    0.949235,
    0.314567,
    0.999488,
    0.031995,
    -0.013277,
    0.999912,
    -0.98748,
    -0.157746,
    0.946042,
    0.324043,
    0.999456,
    0.032994,
    -0.84857,
    0.529083,
    -0.966798,
    -0.255541,
    0.942755,
    0.333487,
    0.999422,
    0.033993,
    -0.903692,
    -0.428183,
    -0.936457,
    -0.350783,
    0.939373,
    0.342898,
    0.999388,
    0.034993,
    -0.127964,
    -0.991779,
    -0.896758,
    -0.442521,
    0.935897,
    0.352274,
    0.999352,
    0.035992,
    0.765414,
    -0.643538,
    -0.8481,
    -0.529836,
    0.932327,
    0.361615,
    0.999316,
    0.036992,
    0.955074,
    0.296369,
    -0.790968,
    -0.611858,
    0.928665,
    0.37092,
    0.999278,
    0.037991,
    0.266643,
    0.963795,
    -0.725932,
    -0.687766,
    0.924909,
    0.380188,
    0.99924,
    0.03899,
    -0.666938,
    0.745113,
    -0.653644,
    -0.756803,
    0.921061,
    0.389418,
    0.9992,
    0.039989,
    -0.987339,
    -0.158623,
    -0.574824,
    -0.818277,
    0.917121,
    0.398609,
    0.99916,
    0.040989,
    -0.399985,
    -0.916522,
    -0.490261,
    -0.871576,
    0.913089,
    0.40776,
    0.999118,
    0.041988,
    0.555113,
    -0.831775,
    -0.400799,
    -0.916166,
    0.908966,
    0.416871,
    0.999076,
    0.042987,
    0.999843,
    0.017702,
    -0.307333,
    -0.951602,
    0.904752,
    0.425939,
    0.999032,
    0.043986,
    0.525322,
    0.850904,
    -0.210796,
    -0.97753,
    0.900447,
    0.434966,
    0.998988,
    0.044985,
    -0.432178,
    0.901788,
    -0.112153,
    -0.993691,
    0.896053,
    0.443948,
    0.998942,
    0.045984,
    -0.992336,
    0.123573,
    -0.012388,
    -0.999923,
    0.891568,
    0.452886,
    0.998896,
    0.046983,
    -0.640144,
    -0.768255,
    0.087499,
    -0.996165,
    0.886995,
    0.461779,
    0.998848,
    0.047982,
    0.300593,
    -0.953753,
    0.186512,
    -0.982453,
    0.882333,
    0.470626,
    0.9988,
    0.04898,
    0.964966,
    -0.262375,
    0.283662,
    -0.958924,
    0.877583,
    0.479426,
    0.99875,
    0.049979,
    0.742154,
    0.670229,
    0.377978,
    -0.925815,
    0.872745,
    0.488177,
    0.9987,
    0.050978,
    -0.162991,
    0.986628,
    0.468517,
    -0.883455,
    0.867819,
    0.49688,
    0.998648,
    0.051977,
    -0.918283,
    0.395925,
    0.554375,
    -0.832267,
    0.862807,
    0.505533,
    0.998596,
    0.052975,
    -0.82931,
    -0.558789,
    0.634693,
    -0.772764,
    0.857709,
    0.514136,
    0.998542,
    0.053974,
    0.022127,
    -0.999755,
    0.70867,
    -0.70554,
    0.852525,
    0.522687,
    0.998488,
    0.054972,
    0.85322,
    -0.521551,
    0.775566,
    -0.631267,
    0.847255,
    0.531186,
    0.998432,
    0.055971,
    0.899867,
    0.436165,
    0.834713,
    -0.550685,
    0.841901,
    0.539632,
    0.998376,
    0.056969,
    0.11918,
    0.992873,
    0.88552,
    -0.464602,
    0.836463,
    0.548024,
    0.998319,
    0.057967,
    -0.77108,
    0.636738,
    0.927479,
    -0.373877,
    0.830941,
    0.556361,
    0.99826,
    0.058966,
    -0.952413,
    -0.304811,
    0.96017,
    -0.279416,
    0.825336,
    0.564642,
    0.998201,
    0.059964,
    -0.258102,
    -0.966118,
    0.983268,
    -0.182163,
    0.819648,
    0.572867,
    0.99814,
    0.060962,
    0.673507,
    -0.739181,
    0.996542,
    -0.083089,
    0.813879,
    0.581035,
    0.998079,
    0.06196,
    0.985897,
    0.167356,
    0.999859,
    0.016814,
    0.808028,
    0.589145,
    0.998016,
    0.062958,
]
