crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_shaped_reduction_config_axis0_mean.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: cfg
---
ShapedReductionConfig {
    op: Mean,
    axis: Some(
        0,
    ),
    keepdim: false,
}
