crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_shaped_reduction_config_axis1_keepdim.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: cfg
---
ShapedReductionConfig {
    op: Max,
    axis: Some(
        1,
    ),
    keepdim: true,
}
