crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_shaped_reduction_config_global_sum.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: cfg
---
ShapedReductionConfig {
    op: Sum,
    axis: None,
    keepdim: false,
}
