crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_silu_known_inputs.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: output
---
[
    -0.23840584,
    -0.26894143,
    0.0,
    0.7310586,
    1.761594,
]
